@@ -295,6 +295,7 @@ numbers must not be changed. */
 #define PCRE2_INFO_RECURSIONLIMIT       21  /* Obsolete synonym */
 #define PCRE2_INFO_SIZE                 22
 #define PCRE2_INFO_HASBACKSLASHC        23
+#define PCRE2_INFO_FRAMESIZE            24
 
 /* Request types for pcre2_config(). */
 
